Change css height for hny17 reveal to min-height (fix view on mobile)

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -194,7 +194,7 @@ body {
 
 #hny17 {
   background-size: cover;
-  height: 95%;
+  min-height: 95%;
 
   h2, a {
     color: $white;
